--- a/products/templates/products/uoms/categories/index.html
+++ b/products/templates/products/uoms/categories/index.html
@@ -20,29 +20,7 @@
             <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
         </form>
     </div>
-    {% if categories.object_list %}
-    <table>
-        <thead>
-            <td>{% trans 'Name' %}</td>
-            <td>{% trans 'Actions' %}</td>
-        </thead>
-        {% for category in categories.object_list %}
-        <tr>
-            <td>{{ category.name }}</td>
-            <td>
-                <ul class="actions">
-                    <li><a class="view" href="/products/uoms/categories/view/{{ category.id }}/">{% trans 'View' %}</a></li>
-                    <li><a class="edit" href="/products/uoms/categories/edit/{{ category.id }}/">{% trans 'Edit' %}</a></li>
-                    <li><a class="delete" href="/products/uoms/categories/delete/{{ category.id }}/">{% trans 'Delete' %}</a></li>
-                </ul>
-            </td>
-        </tr>
-        {% endfor %}
-    </table>
-    {% with categories as pages %}{% include 'paginator.html' %}{% endwith %}
-    {% else %}
-    <p class="disabled">{% trans 'empty' %}.</p>
-    {% endif %}
+    {{ categories.as_table }}
     <ul class="actions">
         <li><a class="add" href="/products/uoms/categories/add/">{% trans 'Add' %}</a></li>
         <li><a class="uoms" href="/products/uoms/">{% trans 'UOMs' %}</a></li>
