--- a/products/templates/products/uoms/categories/view.html
+++ b/products/templates/products/uoms/categories/view.html
@@ -17,12 +17,7 @@
     <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
     <h3>{% trans 'UOMs' %}</h3>
-    <div id="search">
-        <form action="/products/uoms/categories/view/{{ category.id }}" method="post">
-            <input type="text" name="query"/>
-            <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
-        </form>
-    </div>
+    {% include 'search_box.html' %}
     {% if category.uom_set.all %}
     <table>
         <thead>
