--- a/products/templates/products/view.html
+++ b/products/templates/products/view.html
@@ -15,12 +15,7 @@
     <h3>{% trans 'Details' %}</h3>
     {{ details.as_dl }}
     <h3>{% trans 'Suppliers' %}</h3>
-    <div id="search">
-        <form action="/products/view/{{ product.id }}/" method="post">
-            <input type="text" name="supplier_query"/>
-            <input type="submit" name="search" class="search" value="{% trans 'Search' %}"/>
-        </form>
-    </div>
+    {% include 'search_box.html' %}
     {% if product.supply_set.select_related %}
     <table>
         <thead>
