--- a/media/css/default/style.css
+++ b/media/css/default/style.css
@@ -212,7 +212,7 @@ form p {
     float: left;
     width: 100%;
     padding-top: 10px;
-    margin: 5px 0;
+    margin: 5px 0 35px;
     border-top: 1px solid #d6d6d6;
 }
 
