- Fixed some bugs in "core/menu". - Cleanup of menus in "products" and "warehouses" packages. - A lot of improvements in the CSS.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@123 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/menu/option.html
+++ b/core/templates/menu/option.html
@@ -5,7 +5,7 @@
     {% if option.option_list %}
     <ul class="options">
         {% for opt in option.option_list %}
-        {{ opt }
+        {{ opt }}
         {% endfor %}
     </ul>
     {% endif %}
