--- a/core/templates/menu/menu.html
+++ b/core/templates/menu/menu.html
@@ -5,7 +5,7 @@
     {% if menu.option_list %}
     <ul class="options">
         {% for option in menu.option_list %}
-        {{ option }
+        {{ option }}
         {% endfor %}
     </ul>
     {% endif %}
