--- a/products/templates/products/uoms/index.html
+++ b/products/templates/products/uoms/index.html
@@ -1,9 +1,7 @@
-{% extends 'layout.html' %}
+{% extends 'products/index.html' %}
 
 {% load i18n %}
 {% load breadcrumbs %}
-
-{% block title %}{% trans 'Products' %}{% endblock %}
 
 {% block breadcrumbs %}
     {% add_crumb 'Products' '/products/' %}
@@ -11,13 +9,11 @@
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
-{% block content %}
+{% block current_page %}
     <h3>{% trans 'UOMs' %}</h3>
     {% include 'search_box.html' %}
     {{ uoms.as_table }}
     <ul class="actions">
         <li><a class="add" href="/products/uoms/add/">{% trans 'Add' %}</a></li>
-        <li><a class="categories" href="/products/uoms/categories/">{% trans 'Categories' %}</a></li>
-        <li><a class="products" href="/products/">{% trans 'Products' %}</a></li>
     </ul>
 {% endblock %}
