Added support for drop-down menus.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@125 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/templates/menu/menu.html
+++ b/core/templates/menu/menu.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<li>
+<li class="menu_entry">
     <a{% if menu.active %} class="active"{% endif %} href="{{ menu.link }}"><span class="{{ menu.css|lower }}">{% blocktrans with menu.name as name %}{{ name }}{% endblocktrans %}</span></a>
     {% if menu.option_list %}
     <ul class="options">
