--- a/settings.py.tmpl
+++ b/settings.py.tmpl
@@ -113,7 +113,7 @@ INSTALLED_APPS = (
 )
 
 # Login options.
-LOGIN_REDIRECT_URL = '/accounts/logged'
+LOGIN_REDIRECT_URL = '/accounts/logged/'
 
 LOGIN_REQUIRED_URLS = (
     r'/(.*)$',
