--- a/core/templates/accounts/groups/add.html
+++ b/core/templates/accounts/groups/add.html
@@ -5,13 +5,14 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Accounts' '/accounts/' %}
+    {% add_crumb 'Groups' '/accounts/groups/' %}
     {% add_crumb 'Add' %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
 {% block content %}
     <h3>{% trans 'Add' %}</h3>
-    <form action="/accounts/add/" method="post">
+    <form action="." method="post">
         {{ form.as_p }}
         <div class="actions">
             <input class="save" type="submit" value="{% trans 'Save' %}"/>
