--- a/core/templates/accounts/groups/delete.html
+++ b/core/templates/accounts/groups/delete.html
@@ -5,7 +5,8 @@
 
 {% block breadcrumbs %}
     {% add_crumb 'Accounts' '/accounts/' %}
-    {% add_crumb account %}
+    {% add_crumb 'Groups' '/accounts/groups/' %}
+    {% add_crumb group %}
     <h2>{% render_breadcrumbs %}</h2>
 {% endblock %}
 
@@ -13,7 +14,7 @@
     <h3>{% trans 'Delete' %}</h3>
     <form action="." method="post">
         <div class="message">
-            <p class="warning">{% trans 'Are you sure you want to delete this account and all its related informations?' %}</p>
+            <p class="warning">{% trans 'Are you sure you want to delete this group and all its related informations?' %}</p>
             <div class="actions">
                 <input class="ok" type="submit" name="yes" value="{% trans 'Yes' %}" />
                 <input class="cancel" type="submit" name="no" value="{% trans 'No' %}" />
@@ -21,7 +22,7 @@
         </div>
     </form>
     <ul class="actions">
-        <li><a class="view" href="{{ account.get_absolute_url }}">{% trans 'View' %}</a></li>
-        <li><a class="delete" href="{{ account.get_edit_url }}">{% trans 'Edit' %}</a></li>
+        <li><a class="view" href="{{ group.get_absolute_url }}">{% trans 'View' %}</a></li>
+        <li><a class="delete" href="{{ group.get_edit_url }}">{% trans 'Edit' %}</a></li>
     </ul>
 {% endblock %}
